# stratum

./: .gitignore  README.md  network-notes.txt  notes  pyproject.toml  tox.ini
.github/workflows/: ci.yml
config/: stratum.toml  stratum.toml.example
docs/: stratum_phase1_jira.docx  stratum_phase2_jira.docx  stratum_phase2_jira.pages  stratum_phase3_jira.docx  stratum_spec_v2.docx
stratum/: aws_sesion.py  aws_session.py  config.py  exceptions.py  hasher.py  helpers.py  index.py  main.py  models.py  scanner.py  suggestion_log.py  tagger.py  uploader.py
stratum-infra/: app.py  cdk.json
stratum-infra/stratum_infra/: stratum_infra_stack.py
stratum-infra/tests/unit/: test_stratum_infra_stack.py
stratum/backends/: full_content.py  metadata_only.py
tests/: conftest.py
tests/integration/: conftest.py  helpers.py  test_config.py  test_duplicates.py  test_failure.py  test_running.py  todo.md
tests/integration/sample_dir/: wg-zimmer-in-Berlin-Schoeneberg.9158049 (1).html  wg-zimmer-in-Berlin-Schoeneberg.9158049.html
tests/unit/: test_aws_session.py  test_config.py  test_hasher.py  test_index.py  test_main.py  test_models.py  test_scanner.py  test_suggestion_log.py  test_tagger.py  test_uploader.py
