[project]
name = "stratum"
version = "0.1.0"
description = "Read-only local file-system scanner that detects duplicates and writes advisory suggestions."
authors = [
    {name = "Mia Altieri",email = "mgaltier200@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
stratum = "stratum.main:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
ruff = ">=0.4"
tox = ">=4.0"
black = ">=24.0"
isort = ">=5.0"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=stratum --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
